# ipdf-app

./: .gitignore  Cargo.toml  Dockerfile  compose.yml
.github/workflows/: docker-image.yml
src/: lib.rs  main.rs
src/controllers/: app.rs  mod.rs  pdf.rs
src/services/: app.rs  mod.rs
src/services/pdfs/: delete_page.rs  delete_pages.rs  get_images.rs  get_page_img.rs  join.rs  merge.rs  mod.rs  to_img.rs  to_text.rs  upload.rs
src/utils/: macros.rs  mod.rs  pdf.rs  pdfium.rs  tools.rs
