[package]
name = "ipdf"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7"
actix-multipart = "0.6"
actix-cors = "0.7"
actix-files = "0.6"
# diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
image = "0.25"
pdfium-render = "0.8"
